--- a/package.xml
+++ b/package.xml
@@ -9,12 +9,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>ros_face_count</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <run_depend>cv_bridge</run_depend>
+  <build_depend>cv_bridge</build_depend>
   <run_depend>rospy</run_depend>
-  <run_depend>ros_face_count</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
